# fra_determ

./: .gitignore  README.md  extract_invoice.py  process_invoices.py  pyproject.toml  requirements.txt
github/workflows/: process_invoices.yml
output/: invoices.jsonl
output/raw_text/: Factura_FE25321494893037.txt
src/invoice_pipeline/: generic_parser.py  models.py  pipeline.py  reviewer.py  template_parser.py  text_extraction.py  utils.py
src/invoice_pipeline_gh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/naturgy_invoice_jsonl/: cli.py  parser.py
templates/: naturgy.yml
